--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 networks:
   lb-common:
     name: lb-common
@@ -21,6 +19,6 @@ services:
       - "8081:8080" # The Web UI (enabled by --api)
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:rw
-      - ${pwd}/docker/traefik.toml:/etc/traefik/traefik.toml:rw
+      - ${PWD}/docker/traefik.toml:/etc/traefik/traefik.toml:rw
     networks:
       - lb-common
