Add conf entrypoint for RMQ

--- a/docker/traefik.toml
+++ b/docker/traefik.toml
@@ -20,6 +20,9 @@
   [entryPoints.websecure]
     address = ":443"
 
+# [entryPoints.rmq]
+#     address = ":15672"
+
 ################################################################
 # Traefik logs configuration
 ################################################################
