--- a/docker/traefik.toml
+++ b/docker/traefik.toml
@@ -20,6 +20,9 @@
   [entryPoints.websecure]
     address = ":443"
 
+  [entryPoints.ssh]
+    address = ":22"
+
 # [entryPoints.rmq]
 #     address = ":15672"
 
@@ -145,3 +148,4 @@
   # Default: true
   #
   # exposedByDefault = false
+  network = "lb-common"
