--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -18,6 +18,12 @@ services:
       - "90:90"     # The DB port
       # - "25:25"     # The SMPT port
       - "8081:8080" # The Web UI (enabled by --api)
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.dashboard.rule=Host(`dashboard.local.io`)"
+      - "traefik.http.routers.dashboard.entrypoints=web"
+      - "traefik.http.routers.dashboard.service=api@internal"
+      # - "traefik.http.routers.dashboard.tls=true"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ${PWD}/docker/traefik.yaml:/etc/traefik/traefik.yaml:ro
