Add certificate generation commad Add mapping of certs to traefik Add certs pem ignore in gitignore

--- a/docker/config/traefik/dynamic.yml
+++ b/docker/config/traefik/dynamic.yml
@@ -12,3 +12,9 @@ http:
       #   replacement: "https://${1}"
       #   permanent: true
 
+tls:
+  certificates:
+    - certFile: "/etc/certs/wildcard-local.io-cert.pem"
+      keyFile: "/etc/certs/wildcard-local.io-key.pem"
+      # Note: Traefik will automatically detect the domains from the certificate
+      # The wildcard certificate (*.local.io) will be used automatically for matching domains
