--- a/docker/config/traefik/dynamic.yml
+++ b/docker/config/traefik/dynamic.yml
@@ -11,6 +11,26 @@ http:
       #   regex: "^http://(.*)"
       #   replacement: "https://${1}"
       #   permanent: true
+    sablier:
+        plugin:
+          sablier:
+            sablierUrl: http://sablier:10000  # Sablier service URL (must be reachable from Traefik)
+            group: traefik                    # Group name for managing instances collectively
+            sessionDuration: 5m               # Session duration before shutting down instances
+            # Only one strategy can be used at a time
+            # Declare either `dynamic` or `blocking`, not both
+            ignoreUserAgent: curl             # (Optional) Ignore requests with User Agent header curl to not wake up container
+
+            # Dynamic strategy: displays a waiting page
+            dynamic:
+              displayName: Traefik Sablier # (Optional) Display name (defaults to middleware name)
+              showDetails: true            # (Optional) Show details for this middleware (defaults to Sablier server settings)
+              theme: ghost                 # (Optional) Theme for the waiting page
+              refreshFrequency: 5s         # (Optional) Refresh frequency for the waiting page
+
+            # Blocking strategy: waits for services to start (up to the timeout limit)
+            # blocking: 
+            #   timeout: 1m
 
 tls:
   stores:
